luci-theme-bootstrap: minor CSS fixes
 - Don't remove background for disabled buttons
 - Move inactive tooltip element further out of the view area

(cherry picked from commit 3d0861de2082fe9eb6cef0c480447d8661f783df)

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -1575,7 +1575,7 @@ select + .cbi-button {
 .cbi-tooltip {
 	position: absolute;
 	z-index: 1000;
-	left: -1000px;
+	left: -10000px;
 	box-shadow: 0 0 2px #ccc;
 	border-radius: 3px;
 	background: #fff;
@@ -1662,14 +1662,12 @@ select + .cbi-button {
 
 .btn.disabled {
 	cursor: default;
-	background-image: none;
 	opacity: 0.65;
 	box-shadow: none;
 }
 
 .btn[disabled] {
 	cursor: default;
-	background-image: none;
 	opacity: 0.65;
 	box-shadow: none;
 }
